--- a/styles/style.css
+++ b/styles/style.css
@@ -158,3 +158,63 @@
   margin: 32px;
   padding: 16px;
 }
+/* video section ends */
+/* current-target-container */
+.current-target-container{
+  height: 463px;
+  width: 1140px;
+  margin: 0 auto;
+  display: grid; 
+  grid-template-rows: 33%;
+  /* grid-template-columns:33% ; */
+  grid-column-gap: 1em;
+
+}
+.box-of-container{
+  /* position: static; */
+  border: 2px solid blue;
+  width: 364px;
+  height: 300px;
+  display: flex;
+  margin: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 40px;
+
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+}
+.box-of-container img{
+  height: 55px;
+  width: 38px;
+}
+.container-btn{
+  text-decoration: none;
+  border: 2px solid black;
+
+}
+/* feedback section */
+.support{
+  border: 2px solid green; 
+  display: flex;
+  justify-content: center;
+  width:1140px ;
+  height: 314px;
+  padding: 64px 48px;
+  background-image: url(../assets/handshake.jpg);
+  background-position: cover;
+  background-repeat: no-repeat;
+  align-items: center;
+  border-radius: 10px;
+}
+.support h3{
+  color: white;
+}
+.support p{
+  color: white;
+}
+.support input {
+  background-color: aliceblue;
+  color: black;
+}
