--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,7 @@
   font-weight: 400;
   text-align: center;
 }
+
 .description-section-1{
   border-radius: 16px;
   /* border: 2px solid blue; */
@@ -99,6 +100,7 @@
   align-items: flex-start;
   /* padding: 48px; */
   gap: 150.83px;
+  margin-top: 30px;
 }
 .description-section-1 .div2-text{
   /* width: 477px; */
@@ -135,12 +137,32 @@
 /* description section 1 done */
 /* description section 2 starts */
 .description-section-2{
-  display: grid;
+  border-radius: 16px;
+  margin-top: 30px;
+  /* border: 2px solid blue; */
+  background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+  width: 946px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  /* padding: 48px; */
+  gap: 150.83px;
 
 }
 /* description-section-2 ends */
 .description-section-3{
-  display: grid;
+  border-radius: 16px;
+  margin-top: 30px;
+  /* border: 2px solid blue; */
+  background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+  width: 946px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  /* padding: 48px; */
+  gap: 150.83px;
 }
 .video-link{
   margin: 0 auto;
@@ -153,28 +175,48 @@
   padding: 16px;
 }
 .video-link .video{
-  /* height: 200px;
-  width: 200px; */
   margin: 32px;
   padding: 16px;
 }
 /* video section ends */
 /* current-target-container */
+.current-target-heading{
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  align-items: center;
+  justify-content: center;
+
+}
+.current-target-heading h3{
+  text-align: center;
+  margin-bottom: 20px;
+}
 .current-target-container{
   height: 463px;
   width: 1140px;
   margin: 0 auto;
-  display: grid; 
-  grid-template-rows: 33%;
+  display: flex; 
+  flex-direction: row;
+  justify-content: space-between;
+  gap:20px;
+  /* grid-template-rows: 33%; */
   /* grid-template-columns:33% ; */
-  grid-column-gap: 1em;
+  /* grid-auto-rows: auto; */
+  /* grid-column-gap: 1em; */
 
 }
+
+
+.element-container{
+  display: inline-flex;
+  justify-content: flex-start;
+  
+}
 .box-of-container{
-  /* position: static; */
-  border: 2px solid blue;
-  width: 364px;
-  height: 300px;
+  /* border: 2px solid blue; */
+  /* width: 364px;
+  height: 300px; */
   display: flex;
   margin: 10px;
   flex-direction: column;
@@ -187,7 +229,7 @@
 }
 .box-of-container img{
   height: 55px;
-  width: 38px;
+  width: 50px;
 }
 .container-btn{
   text-decoration: none;
@@ -196,7 +238,7 @@
 }
 /* feedback section */
 .support{
-  border: 2px solid green; 
+  /* border: 2px solid green;  */
   /* padding: 64px; */
   
   /* justify-content: center; */
@@ -257,9 +299,17 @@
   margin-bottom: 0 ;
 }
 .footer{
-  position: absolute;
-  width: 1440px;
-  height: 100px;
-  padding: 32px 150px;
+  /* width: 1440px; */
+  /* height: 100px; */
+  padding: 32px ;
+  display: inline-flex;
+  align-items: first baseline;
+  justify-content: space-between;
   
 }
+/* .footer-icon{
+  display: inline-flex;
+  align-items: end;
+  flex-direction: row;
+  justify-content: flex-end;
+} */
